--- a/k8s/configmap.yml
+++ b/k8s/configmap.yml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: homecare-hub-configmap
+  name: <website-component-name>-configmap
   labels:
-    app: homecare-hub
+    app: <website-component-name>
 data:
-  VIZ_REMOTE: http://viz-backend.sif:9000
+  VIZ_REMOTE: http://<visualization-component-svc-name>.<namespace>:9000
