--- a/k8s/service.yml
+++ b/k8s/service.yml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: homecare-hub
+  name: <website-component-name>
 spec:
   type: NodePort
   ports:
-    - name: homecare-hub
+    - name: <website-component-name>
       port: 3000
       targetPort: 3000
       nodePort: 30031
       protocol: TCP
   selector:
-    app: homecare-hub
+    app: <website-component-name>
